# yonder

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: keenetic-notes.md  rules-format.md  vless-format.md
installer/: __main__.py  flows.py  parsers.py  ssh.py  steps.py  ui.py
installer/resources/: S99singbox  S99yonder
tests/: test_api.py  test_apply.py  test_dataplane_singbox.py  test_doh.py  test_installer_parsers.py  test_installer_singbox.py  test_installer_steps.py  test_keenetic.py  test_killswitch.py  test_probe.py  test_rules.py  test_rules_singbox.py  test_services.py  test_singbox_config.py  test_singbox_runtime.py  test_state.py  test_vless.py  test_watchdog.py  test_xray.py
yonder/: __main__.py  api.py  apply.py  dataplane.py  deps.py  doh.py  fetch.py  keenetic.py  killswitch.py  probe.py  rules.py  schemas.py  services.py  state.py  vless.py  watchdog.py  xray.py
yonder/routes/: __init__.py  dns.py  meta.py  rules.py  server.py  subscriptions.py  vpn.py
yonder/singbox/: __init__.py  clash.py  config.py  dns.py  outbound.py  route.py  service.py
yonder/static/: app.js  index.html  style.css
